--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Serviços</h2>
-            
-        </div>
+        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet, consectetur.</h3>
+     </div>
         <div class="row text-center">
             <!-- Conteúdo dos serviços aqui -->
         </div>
