--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>A Importancia da criação de conteudo</h4>
+                                <h4 class="subheading">Descubra agora!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"O conteúdo é essencial para atrair e engajar o público, construindo autoridade e confiança.
+                                                           Ele melhora a visibilidade online, facilita a comunicação com a audiência e fortalece relacionamentos, gerando
+                                                           resultados para negócios e projetos.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
