--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
                     <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="my-3">Serviço 2</h4>
-                <p class="text-muted">Texto de exemplo para o segundo serviço. Pode ser modificado conforme necessário.</p>
+                <p class="text-muted">Gestão e Tráfego
+    Oferecemos  soluções  completas em gestão e tráfego, otimizando campanhas para maximizar o retorno sobre o investimento. 
+                    Nossos especialistas analisam dados e ajustam estratégias para garantir o melhor desempenho em suas
+                    campanhas publicitárias.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3">Segurança na Web</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <h4 class="my-3">Oferecemos Serviços</h4>
+                <p class="text-muted">Transformamos suas ideias em realidade com serviços de criação de sites, gestão de tráfego e estratégias de marketing digital. 
+                    Conte conosco para otimizar sua presença online e alcançar seus objetivos de negócios.</p>
             </div>
         </div>
     </div>
