--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="my-3"> Faça seu orçmento agora tenha sua loja virtual.</p>
+                     <p class="text-muted">Uma loja virtual é crucial para expandir o alcance do seu negócio, oferecendo conveniência e acessibilidade aos clientes 24/7. Ela não só aumenta a visibilidade da sua marca, mas também permite a personalização da experiência de compra, 
+                         impulsionando as vendas e fortalecendo a relação com seus clientes.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
@@ -68,7 +70,7 @@
                 <p class="text-muted">Gestão e Tráfego
     Oferecemos  soluções  completas em gestão e tráfego, otimizando campanhas para maximizar o retorno sobre o investimento. 
                     Nossos especialistas analisam dados e ajustam estratégias para garantir o melhor desempenho em suas
-                    campanhas publicitárias.</p>
+                    campanhas publicitárias
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
