--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p class="text-muted">Gestão e Tráfego
     Oferecemos  soluções  completas em gestão e tráfego, otimizando campanhas para maximizar o retorno sobre o investimento. 
                     Nossos especialistas analisam dados e ajustam estratégias para garantir o melhor desempenho em suas
-                    campanhas publicitárias
+                    campanhas publicitárias</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
