--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3"> Faça seu orçmento agora tenha sua loja virtual.</p>
+                <h4 class="my-3"> Faça seu orçmento agora tenha sua loja virtual.</h4>
                      <p class="text-muted">Uma loja virtual é crucial para expandir o alcance do seu negócio, oferecendo conveniência e acessibilidade aos clientes 24/7. Ela não só aumenta a visibilidade da sua marca, mas também permite a personalização da experiência de compra </p>
             </div>
             <div class="col-md-4">
