--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="my-3"> Faça seu orçmento agora tenha sua loja virtual.</h4>
-                     <p class="text-muted">Uma loja virtual é crucial para expandir o alcance do seu negócio, oferecendo conveniência e acessibilidade aos clientes 24/7. Ela não só aumenta a visibilidade da sua marca, mas também permite a personalização da experiência de compra </p>
+                     <p class="text-muted">Uma loja virtual é crucial para expandir o alcance do seu negócio, oferecendo conveniência e acessibilidade aos clientes 24/7. Ela não só aumenta a visibilidade da sua marca, mas também permite a personalização da experiência de compra . </p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
