--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3">Serviço 2</h4>
+                <h4 class="my-3">Gestão e Tráfego</h4>
                 <p class="text-muted">Gestão e Tráfego
     Oferecemos  soluções  completas em gestão e tráfego, otimizando campanhas para maximizar o retorno sobre o investimento. 
                     Nossos especialistas analisam dados e ajustam estratégias para garantir o melhor desempenho em suas
