--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <i class="fas fa-circle fa-stack-2x text-primary"></i>
                     <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="my-3">Oferecemos Serviços</h4>
+                <h4 class="my-3">marketing digital.</h4>
                 <p class="text-muted">Transformamos suas ideias em realidade com serviços de criação de sites, gestão de tráfego e estratégias de marketing digital. 
                     Conte conosco para otimizar sua presença online e alcançar seus objetivos de negócios.</p>
             </div>
