--- a/index.html
+++ b/index.html
@@ -194,12 +194,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>A Importancia da criação de conteudo</h4>
+                                <h4>Consstruindo Sonhos web</h4>
                                 <h4 class="subheading">Descubra agora!</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted"O conteúdo é essencial para atrair e engajar o público, construindo autoridade e confiança.
-                                                           Ele melhora a visibilidade online, facilita a comunicação com a audiência e fortalece relacionamentos, gerando
-                                                           resultados para negócios e projetos.</p></div>
+                            <div class="timeline-body"><p class="text-muted""Agência de sites fundada em 2020, especializada na criação de lojas virtuais. Trabalhamos com desenvolvimento em HTML, CSS, Java, criação de lojas em WordPress e produção de conteúdo.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -209,7 +207,7 @@
                                 <h4>March 2011</h4>
                                 <h4 class="subheading">An Agency is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted"> oferecemos serviços de otimização de SEO, marketing digital, gestão de redes sociais, integração de meios de pagamento e suporte técnico para garantir que sua loja virtual tenha sucesso no ambiente online." </p></div>
                         </div>
                     </li>
                     <li>
