--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">Nossa Historia</h2>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Consstruindo Sonhos web</h4>
+                                <h4>Construindo Sonhos web</h4>
                                 <h4 class="subheading">Descubra agora!</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted""Agência de sites fundada em 2020, especializada na criação de lojas virtuais. Trabalhamos com desenvolvimento em HTML, CSS, Java, criação de lojas em WordPress e produção de conteúdo.</p></div>
@@ -203,8 +203,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                             
+                                <h4 class="subheading">An Agencia de sites</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted"> oferecemos serviços de otimização de SEO, marketing digital, gestão de redes sociais, integração de meios de pagamento e suporte técnico para garantir que sua loja virtual tenha sucesso no ambiente online." </p></div>
                         </div>
