--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                              
-                                <h4 class="subheading">An Agencia de sites</h4>
+                                <h4 class="subheading"> Agencia de sites</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted"> oferecemos serviços de otimização de SEO, marketing digital, gestão de redes sociais, integração de meios de pagamento e suporte técnico para garantir que sua loja virtual tenha sucesso no ambiente online." </p></div>
                         </div>
@@ -213,8 +213,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                                <h4>Criação de inovação !</h4>
+                                <h4 class="subheading">faça seusonho crescer </h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
