--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/99297623.jfif alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/pedro.jpeg" alt="..." />
                             <h4> Pedro Rodrigues</h4>
                             <p class="text-muted">Lead Marketer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
