--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Criação de inovação !</h4>
-                                <h4 class="subheading">faça seusonho crescer </h4>
+                                <h4>Criação e inovação !</h4>
+                                <h4 class="subheading">faça seu sonho crescer </h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
@@ -223,10 +223,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
+                                <h4>Seja visto por milhares de pessoas</h4>
                                 <h4 class="subheading">Phase Two Expansion</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Ao ter a empresa bem localizada, colaboradores têm acesso facilitado a ela. Dessa forma, até mesmo funcionários do negócio podem ter mais formas de locomoção no dia a dia, aumentando a satisfação e produtividade no trabalho.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
