--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 <h4>Criação e inovação !</h4>
                                 <h4 class="subheading">faça seu sonho crescer </h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">A agência de criação de sites oferece soluções digitais personalizadas para pequenas e médias empresas, criando sites modernos, funcionais e com hospedagem gratuita. O objetivo é aumentar a presença online dos clientes, impulsionar suas vendas e oferecer suporte contínuo com foco na simplicidade e eficiência.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
