--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Seja visto por milhares de pessoas</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4 class="subheading">Agora mesmo!</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Ao ter a empresa bem localizada, colaboradores têm acesso facilitado a ela. Dessa forma, até mesmo funcionários do negócio podem ter mais formas de locomoção no dia a dia, aumentando a satisfação e produtividade no trabalho.</p></div>
                         </div>
@@ -257,7 +257,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/pedro.jpeg" alt="..." />
                             <h4> Pedro Rodrigues</h4>
-                            <p class="text-muted">Lead Marketer</p>
+                          
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
