--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Nossa Historia</h2>
+                    <h2 class="section-heading text-uppercase">Sobre</h2>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
