--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <!-- Navegação -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/WhatsApp Image 2024-09-10 at 19.07.36 (1).png"alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/contrduindoonhosweb.png"alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
