--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
        <!-- Navegação -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
+              <a class="navbar-brand" href="#page-top">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/Logo da Construindo Sonhos Web.png"alt="..." /></a>
+                 style="height:80px; width:auto;" />
+                  </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
