--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
              <a class="navbar-brand" href="#page-top">
-    <img src="assets/img/Logo da Construindo Sombo Web.png" alt="Construindo Sonhos Web" 
+    <img src="assets/img/Logo da Construindo Sonhos Web.png" alt="Construindo Sonhos Web"
     style="height:180px; width:auto;" />
 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
