--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 
   <header>
-    <img src="Logo%20da%20Constru%C3%ADmos%20Sonhos%20Web.png" alt="Logo Construímos Sonhos Web">
+    <img src="img/Logo da Construímos Sonhos Web.png" alt="Logo Construímos Sonhos Web">
     <h1>🌐 Profissionais que Crescem com um Site</h1>
     <p>Veja como diferentes áreas podem se destacar com uma presença digital forte e moderna.</p>
   </header>
