--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <!-- ADVOGADO -->
   <section>
-    <img src="/Advogado no Escritório Moderno.png" alt="Advogado em seu escritório">
+    <img src="Advogado no Escritório Moderno.png" alt="Advogado em seu escritório">
     <div>
       <h2>⚖️ Você é Advogado?</h2>
       <p>
