--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <!-- NUTRICIONISTA -->
   <section>
-    <img src="https://images.unsplash.com/photo-1588776814546-ec2c0c0b9c59?auto=format&fit=crop&w=600&q=80" alt="Nutricionista atendendo paciente">
+    <img src="img/Advogado no Escritório Moderno.png" alt="Nutricionista atendendo paciente">
     <div>
       <h2>🥗 Você é Nutricionista?</h2>
       <p>
