--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <!-- NUTRICIONISTA -->
   <section>
-    <img src="img/ChatGPT Image 21 de out. de 2025, 18_00_49.png" alt="Nutricionista atendendo paciente">
+    <img src="img/nutricionista" alt="Nutricionista atendendo paciente">
     <div>
       <h2>🥗 Você é Nutricionista?</h2>
       <p>
